deployment_user_mgmt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-mgmt-deployment
  labels:
    app: user-management
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
      - name: user-management
        image: private.repository.corp/api-rest/user-management:1.0.0
        imagePullPolicy: IfNotPresent #use Always in development environment with snapshots versions
        ports:
        - name: service
          containerPort: 8080
          protocol: TCP
        - name: management-port
          containerPort: 8079
          protocol: TCP
        resources:
          limits:
            cpu: '1'
            memory: 1Gi
          request:
            cpu: 50m
            memory: 256M
        livenessProbe:
          httpGet:
            path: actuator/health
            port: management-port
            scheme: HTTP
          initialDelaySeconds: 20
          timeoutSeconds: 15
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: actuator/info
            port: management-port
            scheme: HTTP
          initialDelaySeconds: 20
          timeoutSeconds: 15
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        securityContext:
          runAsUser: 20000
          runAsNonRoot: true
          privileged: false
