service_user_mgmt.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-mgmt-service
spec:
  selector:
    app: user-management
  ports:
    - name: service
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
